fix bootstrap and add media queries to the post_user.html for responsiveness on smaller devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -248,6 +248,20 @@ a:hover {
 
 
 /* Media queries*/
+@media (max-width: 756px) {
+  .bio-panels {
+    text-align: center;
+  }
+
+  .accountimg {
+    margin: 0 auto;
+  }
+  
+  .bio-title {
+    text-align: center;
+  }
+}
+
 @media screen and (max-width: 690px) {
 
   .centered {
